<resources>
    <string name="app_name">moduleCommon</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="text_choose_with_arrow">选择 > </string>
    <string name="title_org_list">组织列表</string>
    <string name="toast_error_http">服务器忙，请稍后重试</string>
    <string name="toast_error_net">当前网络连接不可用</string>
    <string name="upload_pic_max">最多可上传4张照片</string>
    <string name="upload_pic_failed">图片上传失败</string>
    <string name="more">更多</string>
    <string name="up">涨幅</string>
    <string name="down">下跌</string>
    <string name="tip">提示</string>
    <string name="user_no_permission">对不起！系统尚未为您配置权限，请联系管理员</string>
    <string name="tv_approval">审批</string>
    <string name="tv_approval_detail">审批详情</string>
    <string name="tv_wait_approval">待审批</string>
    <string name="tv_had_approval">已审批</string>
    <string name="tv_me_started">我发起的</string>
    <string name="tv_approval_installment">园区</string>
    <string name="tv_approval_filter">筛选</string>
    <string name="tv_pl_choice">请选择</string>
    <string name="tv_approval_type">审批类型</string>
    <string name="tv_approval_status">审批状态</string>
    <string name="text_filtrate">筛选</string>
    <string name="text_divide">园区</string>
    <string name="text_state_closed">已关闭</string>
    <string name="text_state_wait_receive">待接单</string>
    <string name="text_state_wait_send">待派单</string>
    <string name="text_finished">已完成</string>
    <string name="text_state_processing">处理中</string>
    <string name="text_state_new">新生成</string>
    <string name="text_wait_hand">待验收</string>
    <string name="text_order_info">工单信息</string>
    <string name="text_line">条线</string>
    <string name="text_type">分类</string>
    <string name="text_plan_name">计划名称</string>
    <string name="text_work_guide">工作指导</string>
    <string name="text_grid">网格</string>
    <string name="text_building">楼栋</string>
    <string name="text_unit">单元</string>
    <string name="text_order_person">工单负责人</string>
    <string name="text_order_create_time">工单创建时间</string>
    <string name="text_end_time">完成截止时间</string>
    <string name="text_state_completed">已完成</string>
    <string name="text_state_passed">通过</string>
    <string name="text_pic_max">(最多4张)</string>
    <string name="text_submit">提交</string>
    <string name="text_apply_postpone">申请延期</string>
    <string name="text_house">房产</string>
    <string name="text_apply_force_close">强制关闭</string>
    <string name="text_save">保存</string>
    <string name="order_list">工单列表</string>
    <string-array name="order_list_less">
        <item>待跟进</item>
    </string-array>
    <string name="search">搜索</string>
    <string name="et_limit_input_hint">请输入内容,300字以内。</string>
    <string name="tv_tiao_line">条线</string>
    <string name="tv_order_type">工单类型</string>
    <string name="tv_order_type_one">工单类型(一级)</string>
    <string name="tv_order_type_two">工单类型(二级)</string>
    <string name="tv_order_type_three">工单类型(三级)</string>
    <string name="tv_if_late">是否超期</string>
    <string name="text_handle_success">工单提交成功</string>
    <string name="please_select">请选择</string>
    <string name="please_input">请输入</string>
    <string name="resource_type">资源分类</string>
    <string name="resource_info">资源信息</string>
    <string name="patrol_info">巡更信息</string>
    <string name="resource">资源</string>
    <string name="dispose_person">处理人</string>
    <string name="overtime_rank">超时级别</string>
    <string name="question_desc">问题描述</string>
    <string name="question_location">问题位置</string>
    <string name="picture">图片</string>
    <string name="text_choose_org">请选择组织</string>
    <string name="alert_submit_error">提交失败</string>
    <string name="alert_submit_work_order_success">创建派工单成功</string>
    <string name="text_get_order">接单</string>
    <string name="text_is_overdue">是否超期</string>
    <string name="text_line_types">分类</string>
    <string name="text_result_yes">是</string>
    <string name="text_result_no">否</string>
    <string name="text_take_order">接单</string>
    <string name="text_reject">不通过</string>
    <string name="text_commit">提交</string>
    <string name="text_approval">批复</string>
    <string name="text_approval_wait">待验收</string>
    <string name="select_person">选择人员</string>
    <string name="text_choose_work_type">请选择分类</string>
    <string name="text_choose_work_order_type">请选择%1$s级分类</string>
    <string name="text_update_app_title">发现新版本(V%1$s)</string>
    <string name="search_name_or_phone">请搜索姓名或手机号</string>
    <string name="create">提交</string>
    <string name="resend_success">转派成功</string>
    <string name="title_order_condition_pandect">工单列表</string>
    <string name="plan_order">计划工单</string>
    <string name="patro_order">巡查工单</string>
    <string name="work_preview">工作预览</string>
    <string name="txt_plese_enter_reason">请输入原因</string>
    <string name="txt_plese_select_img">请选择图片</string>
    <string name="txt_plese_select_people">请选择人员</string>
    <string name="txt_plese_select_time">请选择预约上门时间</string>
    <string name="txt_time_circle">周期</string>
    <string name="txt_one_month">1个月</string>
    <string name="txt_two_month">2个月</string>
    <string name="txt_three_month">3个月</string>
    <string name="txt_get_report_form">收缴率日报表</string>
    <string name="txt_own_report_form">清欠率日报表</string>
    <string name="txt_get_report_rank">收缴率排名</string>
    <string name="txt_own_report_rank">清欠率排名</string>
    <string name="txt_operate_percent">运营收缴率</string>
    <string name="apply_close_success">提交成功</string>
    <string name="apply_late_success">提交成功</string>
    <string name="text_complete_time">完成截止时间</string>
    <string name="text_date_day">当天</string>
    <string name="text_date_week">本周</string>
    <string name="text_date_month">本月</string>
    <string name="text_date_season">本季度</string>
    <string name="text_alert_photo_empty">请添加处理图片</string>
    <string name="text_alert_handle_content">请填写处理说明</string>
    <string name="text_alert_handle_node">请选择工作节点 %s 的处理结果</string>
    <string name="text_alert_check_node">请输入工作节点 %s 的检查结果</string>
    <string name="text_alert_check_img">请添加工作节点 %s 的图片</string>
    <string name="text_no">序号</string>
    <string name="text_work_items">工作事项/节点</string>
    <string name="text_patrol_time_manager">巡更点处理</string>
    <string name="text_work_time_items">巡更点名称/位置</string>
    <string name="text_handle_pic">处理后图片</string>
    <string name="text_resolve_result">处理结果</string>
    <string name="text_resolve_dis">处理说明</string>
    <string name="text_work_nodes">工作节点</string>
    <string name="text_work_plan">工作计划</string>
    <string name="work_plan">计划工单</string>
    <string name="text_responsible_job">负责岗位</string>
    <string name="text_location">位置</string>
    <string name="text_alert">提示</string>
    <string name="text_applying">审批中</string>
    <string name="text_applying_wait">审批中,请等待</string>
    <string name="text_applying_postponed">该工单已申请延期操作，请耐心等待审批</string>
    <string name="text_applying_force_close">该工单已申请闭单操作，请耐心等待审批</string>
    <string name="text_state_pass">通过</string>
    <string name="text_state_reject">驳回</string>
    <string name="text_work_order_apply">验收</string>
    <string name="text_apply">待验收</string>
    <string name="text_order_num">工单编号</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="alert_submit_client_enquire_order_success">创建客户问询工单成功</string>
    <string name="text_ordered">有序</string>
    <string name="text_unordered">无序</string>
    <string name="text_user_add_complain_info">此用户已有%1$s条投诉信息</string>
    <string name="alert_submit_client_complain_order_success">创建客户投诉工单成功</string>
    <string name="alert_submit_client_repair_order_success">创建客户报修工单成功</string>
    <string name="text_request_create_distribute">是否创建派工单</string>
    <string name="text_result">结果</string>
    <string name="text_work_repair">客户报修</string>
    <string name="text_work_complain">客户投诉</string>
    <string name="text_grab_order">抢单</string>
    <string name="text_wait_feedback">待反馈</string>
    <string name="text_copy_me">抄送我</string>
    <string name="text_already_done">已办结</string>
    <string name="text_wait_follow">待跟进</string>
    <string name="text_already_follow">已跟进</string>
    <string name="text_report_repair_people">报修人</string>
    <string name="text_create_time">创建时间</string>
    <string name="text_grab_success">抢单成功，请在"待跟进"中查看</string>
    <string name="text_grab_faile">该抢单任务已失效</string>
    <string name="text_initiate_communication">发起沟通</string>
    <string name="text_repairs_type">报修类别</string>
    <string name="text_contact">沟通</string>
    <string name="text_please_enter_reason">请填写结果</string>
    <string name="text_response_success">响应成功</string>
    <string name="text_save_success">保存成功</string>
    <string name="text_select_material">选择材料</string>
    <string name="text_submit_success">提交成功</string>
    <string name="tv_customer_inquiries">客户问询</string>
    <string name="tv_in_process">处理中</string>
    <string name="tv_real_estate">房产</string>
    <string name="tv_asking_people">问询人</string>
    <string name="tv_work_num">工单编号</string>
    <string name="tv_create_time">创建时间</string>
    <string name="tv_turn_order">转单</string>
    <string name="tv_talk">沟通</string>
    <string name="tv_feed_back">反馈</string>
    <string name="tv_dealing">待处理</string>
    <string name="tv_closed">已关闭</string>
    <string name="tv_for_respone">待评价</string>
    <string name="tv_load_more" >加载更多</string>
    <string name="text_know">我知道了</string>
    <string name="text_re_scan">重新扫码</string>
    <string name="tv_deal_result">处理结果</string>
    <string name="tv_had_solve">已解决</string>
    <string name="tv_un_solve">未解决</string>
    <string name="tv_evaluation">评价</string>
    <string name="tv_instructions">说明</string>
    <string name="tv_enter">请输入文字信息</string>
    <string name="text_wait_response">待响应</string>
    <string name="text_handling">处理中</string>
    <string name="text_wait_send">待派单</string>
    <string name="text_wait_evaluate">待评价</string>
    <string name="text_wait_grab">待抢单</string>
    <string name="text_need_divide_selected">请先选择园区</string>
    <string-array name="customer_inquiries_list">
        <item>待跟进</item>
        <item>待反馈</item>
        <item>已跟进</item>
        <item>已办结</item>
        <item>抄送我</item>
    </string-array>
    <string-array name="scan_res_list">
        <item>待处理工单</item>
        <item>历史工单</item>
        <item>基本信息</item>
    </string-array>
    <string-array name="inquiries_order_list">
        <item>待跟进</item>
    </string-array>
    <string name="text_send_order">派工单</string>
    <string name="text_turn_order">转单</string>
    <string name="text_resend_to">转派至</string>
    <string name="text_please_select">请选择</string>
    <string name="text_resend_reason">转派原因</string>
    <string name="text_enter_reason">请输入转派原因</string>
    <string name="text_wait_handle">待跟进</string>
    <string name="text_already_handle">已跟进</string>
    <string name="text_resend_order">转派工单</string>
    <string name="text_histroy">历史流程</string>
    <string name="text_take_order_success">接单成功</string>
    <string name="text_alert_handle_result">请输入处理结果</string>
    <string name="text_alert_handle_pic">请选择处理后图片</string>
    <string name="text_add_people">添加人员</string>
    <string name="text_pending_work_order">待处理工单：</string>
    <string name="text_apply_late">申请延期</string>
    <string name="text_apply_close">申请闭单</string>
    <string name="text_alert_input_suggestion">请输入验收意见</string>
    <string name="text_check_success">验收提交成功</string>
    <string name="text_alert_check_result">请输入验收结论</string>
    <string name="text_reply_success">批复成功</string>
    <string name="tv_cache">缓存</string>
    <string name="tv_check_date">检查日期</string>
    <string name="tv_severity">严重程度</string>
    <string name="tv_correct_deadline">纠正截止日期</string>
    <string name="tv_inspected">被检查人</string>
</resources>