<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="type"
            type="com.einyun.app.pms.disqualified.SelectType" />
        <variable
            name="bean"
            type="com.einyun.app.library.resource.workorder.net.request.CreateSendOrderRequest" />

        <variable
            name="callBack"
            type="com.einyun.app.pms.disqualified.ui.CreateDisqualifiedActivity" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <include
            android:id="@id/head_bar"
            layout="@layout/include_layout_activity_head" />
        <View style="@style/base_underline" />
        <com.einyun.app.common.ui.component.AbScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:onClick="@{()->callBack.pleaseSelect(type.AGING)}"
                    style="@style/ll_create_order">

                    <TextView style="@style/tv_create_order_red_star" />

                    <TextView
                        style="@style/tv_create_order_name"
                        android:text="@string/text_divide" />

                    <TextView
                        android:id="@+id/tv_divide"
                        style="@style/tv_create_order_select_single" />

                    <ImageView style="@style/tv_create_order_right_arrow" />
                </LinearLayout>
                <View style="@style/base_underline" />
                <LinearLayout
                    android:onClick="@{()->callBack.pleaseSelect(type.CHECK_DATE)}"
                    style="@style/ll_create_order">

                    <TextView style="@style/tv_create_order_red_star" />

                    <TextView
                        style="@style/tv_create_order_name"
                        android:text="@string/tv_check_date" />

                    <TextView
                        android:id="@+id/tv_check_date"
                        style="@style/tv_create_order_select_single" />

                    <ImageView style="@style/tv_create_order_right_arrow" />
                </LinearLayout>
                <View style="@style/base_underline" />
                <LinearLayout
                    style="@style/ll_create_order">

                    <TextView style="@style/tv_create_order_red_star" />

                    <TextView
                        style="@style/tv_create_order_name"
                        android:text="@string/question_desc" />
                </LinearLayout>

                <LinearLayout
                    style="@style/ll_create_order"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/px_30">

                    <com.einyun.app.common.ui.component.limit.LimitInput
                        android:id="@+id/lt_question_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:hintText="请输入问题描述"
                        app:maxNumber="300" />
                </LinearLayout>
                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/ll_old"
                    style="@style/ll_create_order"
                    android:onClick="@{()->callBack.onOldCodeClick()}">

                    <TextView style="@style/tv_create_order_red_star" />

                    <TextView
                        style="@style/tv_create_order_name"
                        android:text="原工单号" />

                    <TextView
                        android:id="@+id/tv_old_code"
                        android:singleLine="false"
                        android:layout_height="match_parent"
                        style="@style/tv_create_order_select_single"
                        android:text=""/>

                    <ImageView
                        android:visibility="visible"
                        style="@style/tv_create_order_right_arrow" />
                </LinearLayout>
                <View style="@style/base_underline" />
                <LinearLayout
                    android:onClick="@{()->callBack.pleaseSelect(type.LINE)}"
                    android:layout_marginTop="@dimen/px_20"
                    style="@style/ll_create_order">

                    <TextView style="@style/tv_create_order_red_star" />

                    <TextView
                        style="@style/tv_create_order_name"
                        android:text="@string/text_line" />

                    <TextView
                        android:id="@+id/tv_line"
                        style="@style/tv_create_order_select_single"/>

                    <ImageView style="@style/tv_create_order_right_arrow" />
                </LinearLayout>

                <View style="@style/base_underline" />

                <LinearLayout
                    android:onClick="@{()->callBack.pleaseSelect(type.SEVERITY)}"
                    style="@style/ll_create_order">

                    <TextView style="@style/tv_create_order_red_star" />

                    <TextView
                        style="@style/tv_create_order_name"
                        android:text="@string/tv_severity" />

                    <TextView
                        android:id="@+id/tv_severity"
                        style="@style/tv_create_order_select_single"/>

                    <ImageView style="@style/tv_create_order_right_arrow" />
                </LinearLayout>

                <View style="@style/base_underline" />

                <LinearLayout
                    android:onClick="@{()->callBack.pleaseSelect(type.DEADLINE)}"
                    style="@style/ll_create_order">

                    <TextView style="@style/tv_create_order_red_star" />

                    <TextView
                        style="@style/tv_create_order_name"
                        android:text="@string/tv_correct_deadline" />

                    <TextView
                        android:id="@+id/tv_deal_line"
                        style="@style/tv_create_order_select_single" />

                    <ImageView style="@style/tv_create_order_right_arrow" />
                </LinearLayout>

                <View style="@style/base_underline" />
                <LinearLayout
                    android:onClick="@{()->callBack.pleaseSelect(type.INSPECTED)}"
                    style="@style/ll_create_order">

                    <TextView style="@style/tv_create_order_red_star" />

                    <TextView
                        style="@style/tv_create_order_name"
                        android:text="@string/tv_inspected" />

                    <TextView
                        android:id="@+id/tv_inspected"
                        style="@style/tv_create_order_select_single" />

                    <ImageView style="@style/tv_create_order_right_arrow" />
                </LinearLayout>

                <View style="@style/base_underline" />

                <LinearLayout style="@style/ll_create_order">

                    <TextView
                        style="@style/tv_create_order_name"
                        android:layout_weight="0"
                        android:text="@string/picture" />

                    <TextView
                        android:textColor="@color/greyTextColor"
                        style="@style/tv_create_order_red_star"
                        android:text="（最多4张）"
                        android:textSize="@dimen/font_size13" />
                </LinearLayout>

                <LinearLayout
                    style="@style/ll_create_order"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_imglist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/px_30">

                    </androidx.recyclerview.widget.RecyclerView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_pass"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="45dp">
                    <TextView
                        android:onClick="@{()->callBack.onCacheClick()}"
                        android:layout_marginLeft="20dp"
                        android:text="@string/tv_cache"
                        android:background="@drawable/shape_iv_unpass"
                        android:layout_width="0dp"
                        android:textColor="@color/blueTextColor"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginRight="7.5dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"/>
                    <TextView
                        android:onClick="@{()->callBack.onPassClick()}"
                        android:layout_marginLeft="7.5dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/text_commit"
                        android:background="@drawable/select_btn_bg"
                        android:layout_width="0dp"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"/>

                </LinearLayout>

            </LinearLayout>
        </com.einyun.app.common.ui.component.AbScrollView>
    </LinearLayout>

</layout>