<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/px_75"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/shape_frame_gray"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="01"
                android:textColor="@color/txt_black_order"
                android:textSize="14sp" />
            <LinearLayout
                android:id="@+id/ll_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/px_75"
                android:layout_weight="9"
                android:background="@drawable/shape_frame_gray"
                android:orientation="vertical"
                android:paddingLeft="5dp"
                android:paddingTop="8dp"
                android:paddingRight="5dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/tv_work_things"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="抬杆"
                    android:textColor="@color/txt_black_order"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_work_node"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="桩头无松动"
                    android:textColor="@color/normal_main_text_icon_color"
                    android:textSize="13sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="@dimen/px_120"
                android:layout_height="match_parent"
                android:minHeight="@dimen/px_75"
                android:background="@drawable/shape_frame_gray"
                android:gravity="center"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/tv_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/txt_black_order"
                    android:layout_gravity="center"
                    android:text="@string/text_result"
                    />
                <Button
                    android:id="@+id/btn_agree"
                    android:layout_width="@dimen/px_104"
                    android:layout_height="@dimen/px_40"
                    android:background="@drawable/corners_green_large"
                    android:textColor="@color/white"
                    android:text="@string/text_state_passed"
                    />
                <Button
                    android:id="@+id/btn_reject"
                    android:layout_width="@dimen/px_104"
                    android:layout_height="@dimen/px_40"
                    android:background="@drawable/corners_red_large"
                    android:textColor="@color/white"
                    android:text="@string/text_reject"
                    />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>
